--- a/programs/chameleon/Cargo.toml
+++ b/programs/chameleon/Cargo.toml
@@ -14,7 +14,13 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+anchor-spl = { version = "0.30.1", features = ["default", "metadata"] }
+# for cNFT
+mpl-bubblegum = "1.4.0"
+spl-account-compression = { version = "0.3.0", features = ["cpi"] }
+spl-noop = { version = "0.2.0", features = ["cpi"] }
+spl-concurrent-merkle-tree = { version = "0.2.0" }
