--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,11 +1,12 @@
 [toolchain]
+anchor_version = "0.30.1"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-chameleon = "4Gr4rpnqGQfgvf4wcGN66kWR5PNpo8LyWfeK7CoAJPoF"
+chameleon = "chamgoBwbPefUJmR7bDoe4EyjNSBVk3cEsTffqk7PYt"
 
 [registry]
 url = "https://api.apr.dev"
@@ -16,3 +17,6 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[workspace]
+types = "app/src/idl/" # auto generate/update when anchor build
