--- a/Anchor.toml
+++ b/Anchor.toml
@@ -28,17 +28,17 @@ upgradeable = false
 
 [[test.genesis]]
 address = "cmtDvXumGCrqC1Age74AVPhSRVXJMd8PJS91L8KbNCK"
-program = "depo/spl_account_compression_program.so"
+program = "deps/spl_account_compression_program.so"
 
 [[test.genesis]]
 address = "noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV"
-program = "depo/spl_noop_program.so"
+program = "deps/spl_noop_program.so"
 
 [[test.genesis]]
 address = "BGUMAp9Gq7iTEuizy4pqaxsTyUCBK68MDfK752saRPUY"
-program = "depo/bubblegum_program.so"
+program = "deps/bubblegum_program.so"
 
 [[test.genesis]]
 address = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"
-program = "depo/token_metadata_program.so"
+program = "deps/token_metadata_program.so"
 
