--- a/programs/chameleon/Cargo.toml
+++ b/programs/chameleon/Cargo.toml
@@ -18,13 +18,12 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
 # Anchor
-anchor-client = { version = "0.30.1" }
+# anchor-client = { version = "0.30.1" }
 anchor-lang = { version = "0.30.1" }
 anchor-spl = { version = "0.30.1", features = ["default", "metadata"] }
 # Metaplex
 mpl-token-metadata = { version = "4.1.2", features = ["test-sbf"] }
 mpl-bubblegum = "1.4.0"
-# Solana
 spl-account-compression = { version = "0.3.1", features = ["cpi"] }
 spl-noop = { version = "0.2.0", features = ["cpi"] }
 spl-concurrent-merkle-tree = { version = "0.3.0" }
